--- a/AirportExplorer/AirportExplorer.csproj
+++ b/AirportExplorer/AirportExplorer.csproj
@@ -1,8 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <UserSecretsId>9770f3ee-25f7-422d-a4a7-8cace0b5a22d</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="6.1.0" />
+    <PackageReference Include="GeoJSON.Net" Version="1.1.64" />
+    <PackageReference Include="GoogleApi" Version="3.2.13" />
+    <PackageReference Include="MaxMind.GeoIP2" Version="2.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
